# rs_workspace

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  filesys.js
.cargo/: config.toml
.github/workflows/: rust.yml
cl/: Cargo.toml  build.rs
cl/benches/: README.md  fs.rs
cl/examples/: axum_client.rs  axum_client_2.rs  axum_server.rs  axum_server_2.rs  axum_server_2_2.rs  block_v1.rs  block_v2.rs  block_v2_2.rs  block_v3.rs  block_v3_2.rs  block_v4.rs  block_v5.rs  block_v6.rs  buffer_copy.rs  compression.rs  find_files.rs  fs_link.rs  fs_link_folder.rs  fs_metadata.rs  fs_open.rs  fs_read_dir.rs  fs_remove_dir.rs  fs_write.rs  global_mem.rs  global_mem_2.rs  global_mem_mul.rs  global_mem_mul_stack.rs  global_vec_1.rs  global_vec_1_1.rs  hello.rs  help.rs  load_files.rs  load_files_2.rs  load_files_2_7.rs  load_files_2_7_2.rs  load_files_3.rs  load_files_4.rs  mem.rs  mem_alt.rs  mem_id.rs  (+26 more)
cl/examples/files/: info.txt  libaho_corasick-82cd3436e40cc54e.rmeta  main.js  package-lock.json  package.json
cl/src/: error.rs  global_vec.rs  lib.rs  ocl_fs.rs  ocl_fs_2.rs  ocl_fs_3.rs  ocl_fs_config.rs  ocl_v1.rs  ocl_v2.rs  ocl_v3.rs  ocl_v4.rs  ocl_v5.rs  ocl_v6.rs  ocl_v7.rs  process.rs  server.rs  utils.rs
cl/tests/: hello.rs
cli/: Cargo.toml  README.md
cli/benches/: README.md  iterator.rs  my_benchmark.rs
cli/src/: main.rs
cool/: Cargo.toml  commands.txt  index.d.ts  index.js  package-lock.json  package.json  req.js
cool/benches/: e.bench.js  example.bench.ts  fs.suite.js  fs_write.bench.ts  fs_write.suite.js
cool/benchmark/results/: fs.chart.html  fs.json  reduce.chart.html  reduce.json
cool/files/: to_read.txt  to_write.txt  to_write_bench.txt
cool/npm/darwin-x64/: README.md  package.json
cool/npm/linux-x64-gnu/: README.md  package.json
cool/npm/win32-x64-msvc/: README.md  package.json
cool/src/: fs.rs  fs_v2.rs  global.rs  lib.rs
cool/test/: cache.spec.ts  fs.spec.disabled  fs.spec.ts  fs_v2.spec.ts  global_vec.spec.ts  index.spec.ts  opencl_buffer.spec.ts  read_file.spec.ts
docs/: book.toml
docs/src/: SUMMARY.md  chapter_1.md  contributors.md
docs/src/chapter_2/: README.md  chapter_2_1.md
docs/src/chapter_3/: README.md  chapter_3_1.md  chapter_3_2.md
ffi/: Cargo.toml  build.rs
ffi/src/: gpu_performance.rs  lib.rs
lib/Dll1/: Dll1.sln
lib/Dll1/Dll1/: Dll1.vcxproj  dllmain.cpp
lib/Dll1/Dll1/x64/Debug/: Dll1.dll.recipe  Dll1.ilk  vc143.idb
lib/Dll1/Dll1/x64/Debug/Dll1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  (+5 more)
lib/Dll1/Dll1/x64/Release/: Dll1.dll.recipe  Dll1.iobj  Dll1.ipdb
lib/Dll1/x64/Debug/: Dll1.exp  Dll1.lib
lib/Dll1/x64/Release/: Dll1.exp
lib/hello/: CMakeLists.txt  library.cpp  library.h
lib/world/: CMakeLists.txt  library.c  library.h
opencl3/src/: command_queue.rs  kernel.rs  platform.rs  program.rs
practice-multiple/: Cargo.toml
rs-core/: Cargo.toml
rs-core-derive/: Cargo.toml
rs-core/src/: cache.rs  files.rs  lib.rs  runtime.rs
rs-core/tests/: features.rs
rs-derive/getter-derive/: Cargo.toml
rs-derive/getter-derive/src/: lib.rs
rs-derive/getter-derive/tests/: news_feed.rs
rs-derive/heapsize/: Cargo.toml
rs-derive/heapsize-derive/: Cargo.toml
rs-derive/heapsize-derive/src/: head.rs  lib.rs
rs-derive/hello_macro/: Cargo.toml
rs-derive/hello_macro/src/: lib.rs
rs-derive/hello_macro_derive/src/: lib.rs
rs-extra/: Cargo.toml
rs-extra/src/: lib.rs
rs-macro/: Cargo.toml
rs-macro/examples/: sum_macro.rs
rs-macro/src/: sum.rs
rs-proc-macro/: Cargo.toml
rs-proc-macro/examples/: show.rs
rs-proc-macro/src/: entry.rs  lib.rs
rs-proc-macro/src/derives/: counter.rs  hello.rs  mod.rs  process.rs
rs-proc-macro/tests/: answer.rs  derives.rs
rs-wrapper-sys/: Cargo.toml  README.md  build.rs  cool.h
rs-wrapper-sys/src/: bindings.rs  lib.rs
shared/: Cargo.toml
shared/examples/: hello.rs
shared/src/: callback.rs  counter.rs  environment.rs  fibonacci.rs  lib.rs  sample.rs  yak_shave.rs
(+8 files in other folders)
