[package]
name = "cl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.opencl3]
version = "0.9.2"
features = ["CL_VERSION_1_1", "CL_VERSION_1_2", "CL_VERSION_2_0"]

[dependencies.cl3]
version = "0.9.1"
features = ["CL_VERSION_1_1", "CL_VERSION_1_2", "CL_VERSION_2_0"]
