[package]
name = "cl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version="1.27.0", features=["full"] }
axum = "0.6.18"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11.17", features = ["json"] }
rand = "0.8.1"

[dependencies.opencl3]
#path = "../opencl3"
version = "0.9.2"
features = ["CL_VERSION_2_0", "CL_VERSION_2_1", "CL_VERSION_2_2", "CL_VERSION_3_0"]

[dependencies.cl3]
version = "0.9.1"
features = ["CL_VERSION_2_0", "CL_VERSION_2_1", "CL_VERSION_2_2", "CL_VERSION_3_0"]

#[env]
#RUST_MIN_STACK=11048576
