[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rs-core = { path = "../rs-core", features = ['cache'] }
rs-extra = { path = "../rs-extra", features = ["rs-macro"] }
shared = { path = "../shared" }
# derives
hello_macro = { path = "../rs-derive/hello_macro" }
heapsize = { path = "../rs-derive/heapsize" }

[dev-dependencies]
criterion = "0.4.0"
rand = "0.8.5"

[[bench]]
name = "my_benchmark"
harness = false

[[bench]]
name = "iterator"
harness = false
