[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rs-core = { path = "../rs-core", features = ['cache'] }
rs-extra = { path = "../rs-extra", features = ["rs-macro"] }
shared = { path = "../shared" }
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
mini-redis = "0.4"
lazy_static = "1.4.0"
thiserror = "1.0"
# derives
hello_macro = { path = "../rs-derive/hello_macro" }
heapsize = { path = "../rs-derive/heapsize" }
getter_derive = { path = "../rs-derive/getter-derive" }

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }
rand = "0.8.5"

[[bench]]
name = "my_benchmark"
harness = false

[[bench]]
name = "iterator"
harness = false
