[package]
edition = "2021"
name = "cool"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.0", default-features = false, features = ["napi4", "napi6", "tokio_rt"] }
napi-derive = "2.12.2"
cl = { path = "../cl" }
lazy_static = "1.4.0"

[build-dependencies]
napi-build = "2.0.1"

#[profile.release]
#lto = true
